[tool.poetry]
name = "infrabel-data-analysis"
version = "0.1.0"
description = ""
authors = ["Marco Di Gennaro <marco.digennaro@dtsc.be>", "Shreya Bhattacharaya <shreya.bhattacharya@dtsc.be>", "Melih Taki <melih.taki@dtsc.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = ">=1.0.0"
numpy = ">=1.18.0"
matplotlib = ">=3.0.0"
seaborn = ">=0.10.0"
scipy = ">=1.4.0"
scikit-learn = ">=0.22.0"
shapely = ">=1.7.0"
geopandas = ">=0.7.0"
folium = ">=0.11.0"
contextily = ">=1.0.0"
plotly = ">=5.0.0"
streamlit = "^1.41.1"
streamlit-folium = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
